--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "yes",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
